@@ -1,5 +1,8 @@
 2006-03-23  Jb Evain <jbevain@gmail.com>
 
+	* Mono.Cecil.Metadata/MetadataWriter.cs:
+		Ensure every blob signature is unique.
+
 	* Mono.Cecil/IModuleDefinition.cs
 	  Mono.Cecil/ModuleDefinition.cs:
 		Rename method to avoid confusion.
